Don't need int tests on master, just on PRs

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -212,6 +212,7 @@ jobs:
       run: |
         go test `go list ./... | grep -v api | grep -v integration | grep -v expect`
   inttest_critical:
+    if: github.ref != 'refs/heads/master'
     name: Critical Integration Test
     strategy:
       matrix:
