--- a/installers/msi-language/ActiveState/ActiveState.csproj
+++ b/installers/msi-language/ActiveState/ActiveState.csproj
@@ -189,6 +189,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Logging.cs" />
+    <Compile Include="Retry.cs" />
     <Compile Include="Tracker.cs" />
     <Compile Include="FileAssociation.cs" />
     <Compile Include="Command.cs" />
