--- a/installers/msi-language/.editorconfig
+++ b/installers/msi-language/.editorconfig
@@ -9,3 +9,9 @@ indent_style = tab
 indent_size = 2
 tabsize = 2
 trim_trailing_whitespace = true
+
+[*.cs]
+indent_style = space
+indent_size = 4
+tabsize = 4
+trim_trailing_whitespace = true
