--- a/activestate.yaml
+++ b/activestate.yaml
@@ -135,7 +135,7 @@ scripts:
     language: bash
     description: "Runs a remote debugger, that can be hooked into from your IDE, example usage: `state run debug activate` (will debug `state activate`)"
     standalone: true
-    value: dlv debug --headless --listen=:2346 --api-version=2 github.com/ActiveState/cli/cmd/state -- $@
+    value: GOFLAGS=-mod=vendor dlv debug --headless --listen=:2346 --api-version=2 github.com/ActiveState/cli/cmd/state -- $@
 events:
   - name: activate
     if: ne .Shell "cmd"
