tracker events time out after 15 seconds...
Otherwise they would block the entire MSI on a bad/non-existent
internet connection.

--- a/installers/msi-language/ActiveState/ActiveState.csproj
+++ b/installers/msi-language/ActiveState/ActiveState.csproj
@@ -127,6 +127,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Error.cs" />
+    <Compile Include="TimeoutWebClient.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="UserEnvironment.cs" />
     <Compile Include="Logging.cs" />
     <Compile Include="Retry.cs" />
