Create empty file if we are not on master

--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -3,6 +3,8 @@ name: "Generate Version"
 shell: bash
 run: |
   if [[ "${GITHUB_REF##*/}" == "master" ]]; then
+    state run generate-version master
+  else
     state run generate-version
   fi
 #@ end
