--- a/activestate.generators.yaml
+++ b/activestate.generators.yaml
@@ -48,7 +48,12 @@ scripts:
     description: Generate version file
     value: |
       mkdir -p build/update
-      wget -O build/update/version.json https://s3.ca-central-1.amazonaws.com/cli-update/update/state/version.json
+      echo "Argument $1"
+      if ! [ -z "$1" ] && [ "$1" == "master" ]; then
+        wget -O build/update/version.json https://s3.ca-central-1.amazonaws.com/cli-update/update/state/version.json
+      else
+        touch build/update/version.json
+      fi
   - name: generate-update
     language: bash
     description: Generate update files
