--- a/.github/workflows-src/jobs.lib.yml
+++ b/.github/workflows-src/jobs.lib.yml
@@ -74,7 +74,7 @@ steps:
 
 #@ def jobs_inttestcrit():
 name: "Critical Integration Test"
-strategy: *strategy
+strategy: #@ strategy(False)
 runs-on: *runs-on
 env: *env
 timeout-minutes: 25
