--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -100,9 +100,9 @@ jobs:
         echo $MSI_CERT_BASE64 | base64 --decode > Cert.p12
         export PATH=/c/Program\ Files\ \(x86\)/Microsoft\ Visual\ Studio/2019/Enterprise/MSBuild/Current/Bin/:/c/Program\ Files\ \(x86\)/Windows\ Kits/10/bin/10.0.16299.0/x86/:$PATH
         export SHELL=bash
-        state run build-msi-language Perl Public ActiveState/ActivePerl-5.26 5.26.3001
+        state run build-msi-language ActivePerl Public ActiveState/ActivePerl-5.26 5.26.3001
         signtool.exe sign -d "ActiveState Language Installer" -f "Cert.p12" -p ${CODE_SIGNING_PASSWD} ./build/msi/ActivePerl-5.26.msi
-        state run build-msi-language Perl Public ActiveState/ActivePerl-5.28 5.28.1001
+        state run build-msi-language ActivePerl Public ActiveState/ActivePerl-5.28 5.28.1001
         signtool.exe sign -d "ActiveState Language Installer" -f "Cert.p12" -p ${CODE_SIGNING_PASSWD} ./build/msi/ActivePerl-5.28.msi
         state run build-base-language-msi
       env:
@@ -130,3 +130,5 @@ jobs:
         INTEGRATION_TEST_USERNAME: ${{ secrets.INTEGRATION_TEST_USERNAME }}
         INTEGRATION_TEST_PASSWORD: ${{ secrets.INTEGRATION_TEST_PASSWORD }}
         PLATFORM_API_TOKEN: ${{ secrets.PLATFORM_API_TOKEN }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
