Ensure log artifact uploading occurs

--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -149,6 +149,7 @@ with:
 ---
 #@ def steps_uploadlogs():
 name: "Upload logs"
+if: ${{ always() }}
 uses: actions/upload-artifact@v2
 with:
   name: logs
