--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -277,6 +277,7 @@ jobs:
         INTEGRATION_TEST_PASSWORD: ${{ secrets.INTEGRATION_TEST_PASSWORD }}
         PLATFORM_API_TOKEN: ${{ secrets.PLATFORM_API_TOKEN }}
     - name: Upload logs
+      if: ${{ always() }}
       uses: actions/upload-artifact@v2
       with:
         name: logs
