Ensure int msi logs are uploaded

--- a/.github/workflows-src/jobs.lib.yml
+++ b/.github/workflows-src/jobs.lib.yml
@@ -104,6 +104,7 @@ steps:
   - #@ steps_genupdate()
   - #@ steps_build_languages_msi()
   - #@ steps_inttest()
+  - #@ steps_uploadlogs()
 #@ end
 
 #@ def jobs_deploy():
