--- a/.github/workflows-src/jobs.lib.yml
+++ b/.github/workflows-src/jobs.lib.yml
@@ -1,4 +1,4 @@
-#@ load("steps.lib.yml", "steps_genversion", "steps_preprocess", "steps_build", "steps_build_32bit", "steps_genupdate", "steps_genupdate_32bit", "steps_installgo", "steps_setup", "steps_test", "steps_inttestcrit", "steps_inttest", "steps_uploadartifacts", "steps_uploadsessartifacts", "steps_downloadsessartifacts", "steps_deletesessartifacts", "steps_deploy", "steps_build_state_msi", "steps_build_languages_msi", "steps_cleanbuild", "steps_validate", "steps_sign", "steps_sign_installscript", "steps_build_installscripts", "steps_uploadsharedartifacts", "steps_uploadlogs", "steps_downloadsharedartifacts", "steps_downloadallsessartifacts", "steps_sanitizeallsessartifacts")
+#@ load("steps.lib.yml", "steps_genversion", "steps_preprocess", "steps_build", "steps_build_32bit", "steps_genupdate", "steps_genupdate_32bit", "steps_installgo", "steps_setup", "steps_test", "steps_inttestcrit", "steps_inttest", "steps_uploadartifacts", "steps_uploadsessartifacts", "steps_downloadsessartifacts", "steps_deletesessartifacts", "steps_deploy", "steps_build_state_msi", "steps_build_languages_msi", "steps_cleanbuild", "steps_validate", "steps_sign", "steps_sign_installscript", "steps_build_installscripts", "steps_uploadsharedartifacts", "steps_downloadsharedartifacts", "steps_downloadallsessartifacts", "steps_sanitizeallsessartifacts")
 
 strategy: &strategy
   matrix:
@@ -85,7 +85,6 @@ steps:
   - #@ steps_genupdate()
   - #@ steps_build_languages_msi()
   - #@ steps_inttestcrit()
-  - #@ steps_uploadlogs()
 #@ end
 
 #@ def jobs_inttest():
@@ -104,7 +103,6 @@ steps:
   - #@ steps_genupdate()
   - #@ steps_build_languages_msi()
   - #@ steps_inttest()
-  - #@ steps_uploadlogs()
 #@ end
 
 #@ def jobs_deploy():
