--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -272,7 +272,9 @@ jobs:
         export SHELL=''
         set +e
         go test -timeout 10m github.com/ActiveState/cli/test/integration -test.v -test.run "^TestLanguageMsiActivePerl|TestDeployIntegrationTestSuite|TestInitIntegrationTestSuite|TestPushIntegrationTestSuite|TestUpdateIntegrationTestSuite$"
+        testCode=$?
         head -n-0 build/*log
+        exit $?
       env:
         INTEGRATION_TEST_USERNAME: ${{ secrets.INTEGRATION_TEST_USERNAME }}
         INTEGRATION_TEST_PASSWORD: ${{ secrets.INTEGRATION_TEST_PASSWORD }}
@@ -343,7 +345,9 @@ jobs:
         export SHELL=''
         set +e
         go test -timeout 20m ./test/integration -v
+        testCode=$?
         head -n-0 build/*log
+        exit $?
       env:
         INTEGRATION_TEST_USERNAME: ${{ secrets.INTEGRATION_TEST_USERNAME }}
         INTEGRATION_TEST_PASSWORD: ${{ secrets.INTEGRATION_TEST_PASSWORD }}
