--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -68,7 +68,9 @@ jobs:
         export SHELL=''
         set +e
         go test -timeout 20m ./test/integration -v
+        testCode=$?
         head -n-0 build/*log
+        exit $?
       env:
         INTEGRATION_TEST_USERNAME: ${{ secrets.INTEGRATION_TEST_USERNAME }}
         INTEGRATION_TEST_PASSWORD: ${{ secrets.INTEGRATION_TEST_PASSWORD }}
