--- a/.github/workflows-src/jobs.lib.yml
+++ b/.github/workflows-src/jobs.lib.yml
@@ -4,6 +4,7 @@ strategy: &strategy
   matrix:
     go-version: [1.13.x]
     platform: [ ubuntu-latest, macos-latest, windows-latest ]
+  fail-fast: false
 runs-on: &runs-on ${{ matrix.platform }}
 env: &env
   ACTIVESTATE_CLI_DISABLE_RUNTIME: true # We don't need Perl or Python
