--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -13,6 +13,7 @@ jobs:
         - ubuntu-latest
         - macos-latest
         - windows-latest
+      fail-fast: false
     runs-on: ${{ matrix.platform }}
     env:
       ACTIVESTATE_CLI_DISABLE_RUNTIME: true
