--- a/.github/workflows-src/build.yml
+++ b/.github/workflows-src/build.yml
@@ -17,6 +17,7 @@ jobs:
     if: github.ref != 'refs/heads/master'
     _: #@ template.replace(jobs_inttestcrit())
   inttest:
+    if: github.ref != 'refs/heads/master'
     _: #@ template.replace(jobs_inttest())
   deploy: #@ jobs_deploy()
 
