Update integration test conditions

--- a/.github/workflows-src/build.yml
+++ b/.github/workflows-src/build.yml
@@ -17,7 +17,7 @@ jobs:
     if: github.ref != 'refs/heads/master'
     _: #@ template.replace(jobs_inttestcrit())
   inttest:
-    if: github.ref != 'refs/heads/master'
+    if: contains(github.event.pull_request.labels.*.name, 'run integration tests')
     _: #@ template.replace(jobs_inttest())
   deploy: #@ jobs_deploy()
 
