--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,6 @@ jobs:
     name: Prepare
     runs-on: ubuntu-latest
     env:
-      ACTIONS_ALLOW_UNSECURE_COMMANDS: true
       ACTIVESTATE_CLI_DISABLE_RUNTIME: true
       GOFLAGS: -mod=vendor
       SHELL: bash
@@ -38,7 +37,7 @@ jobs:
       run: |
         bin=$(pwd)/.github/deps/${{ runner.os }}/bin
         echo "Adding $bin to PATH"
-        echo "::add-path::$bin"
+        echo "$bin" >> $GITHUB_PATH
         printenv
     - name: Generate Version
       shell: bash
@@ -63,7 +62,6 @@ jobs:
       fail-fast: true
     runs-on: ${{ matrix.platform }}
     env:
-      ACTIONS_ALLOW_UNSECURE_COMMANDS: true
       ACTIVESTATE_CLI_DISABLE_RUNTIME: true
       GOFLAGS: -mod=vendor
       SHELL: bash
@@ -86,7 +84,7 @@ jobs:
       run: |
         bin=$(pwd)/.github/deps/${{ runner.os }}/bin
         echo "Adding $bin to PATH"
-        echo "::add-path::$bin"
+        echo "$bin" >> $GITHUB_PATH
         printenv
     - name: Preprocess
       shell: bash
@@ -175,7 +173,6 @@ jobs:
     needs:
     - prepare
     env:
-      ACTIONS_ALLOW_UNSECURE_COMMANDS: true
       ACTIVESTATE_CLI_DISABLE_RUNTIME: true
       GOFLAGS: -mod=vendor
       SHELL: bash
@@ -198,7 +195,7 @@ jobs:
       run: |
         bin=$(pwd)/.github/deps/${{ runner.os }}/bin
         echo "Adding $bin to PATH"
-        echo "::add-path::$bin"
+        echo "$bin" >> $GITHUB_PATH
         printenv
     - name: Preprocess
       shell: bash
@@ -225,7 +222,6 @@ jobs:
       fail-fast: false
     runs-on: ${{ matrix.platform }}
     env:
-      ACTIONS_ALLOW_UNSECURE_COMMANDS: true
       ACTIVESTATE_CLI_DISABLE_RUNTIME: true
       GOFLAGS: -mod=vendor
       SHELL: bash
@@ -243,7 +239,7 @@ jobs:
       run: |
         bin=$(pwd)/.github/deps/${{ runner.os }}/bin
         echo "Adding $bin to PATH"
-        echo "::add-path::$bin"
+        echo "$bin" >> $GITHUB_PATH
         printenv
     - name: Preprocess
       shell: bash
@@ -302,7 +298,6 @@ jobs:
     needs:
     - prepare
     env:
-      ACTIONS_ALLOW_UNSECURE_COMMANDS: true
       ACTIVESTATE_CLI_DISABLE_RUNTIME: true
       GOFLAGS: -mod=vendor
       SHELL: bash
@@ -325,7 +320,7 @@ jobs:
       run: |
         bin=$(pwd)/.github/deps/${{ runner.os }}/bin
         echo "Adding $bin to PATH"
-        echo "::add-path::$bin"
+        echo "$bin" >> $GITHUB_PATH
         printenv
     - name: Preprocess
       shell: bash
@@ -386,7 +381,6 @@ jobs:
     - unittest
     runs-on: ubuntu-latest
     env:
-      ACTIONS_ALLOW_UNSECURE_COMMANDS: true
       ACTIVESTATE_CLI_DISABLE_RUNTIME: true
       GOFLAGS: -mod=vendor
       SHELL: bash
@@ -404,7 +398,7 @@ jobs:
       run: |
         bin=$(pwd)/.github/deps/${{ runner.os }}/bin
         echo "Adding $bin to PATH"
-        echo "::add-path::$bin"
+        echo "$bin" >> $GITHUB_PATH
         printenv
     - name: Download All Session Artifacts
       uses: actions/download-artifact@v2
