--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -89,6 +89,7 @@ jobs:
         state run preprocess
     - name: Build
       shell: bash
+      if: contains(['refs/heads/master', 'refs/heads/beta', 'refs/heads/release'], github.ref)
       run: state run build
     - name: Generate Update
       shell: bash
