--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -7,14 +7,14 @@ run: state run generate-version
 #@ def steps_build():
 name: Build
 shell: bash
-if: contains(['refs/heads/master', 'refs/heads/beta', 'refs/heads/release'], github.ref)
+if: contains(fromJSON('["refs/heads/master", "refs/heads/beta", "refs/heads/release"]'), github.ref)
 run: state run build
 #@ end
 ---
 #@ def steps_build_32bit():
 name: Build (32bit)
 shell: bash
-if: runner.os == 'Windows' && contains(['refs/heads/martind/ci-deploy-build-176150859'], github.ref)
+if: runner.os == 'Windows' && contains(fromJSON('["refs/heads/martind/ci-deploy-build-176150859"]'), github.ref)
 run: state run build-32bit
 #@ end
 ---
@@ -224,7 +224,7 @@ run: |
 #@ def steps_deploy():
 name: "Deploy"
 shell: bash
-if: contains(['refs/heads/master', 'refs/heads/beta', 'refs/heads/release'], github.ref)
+if: contains(fromJSON('["refs/heads/master", "refs/heads/beta", "refs/heads/release"]'), github.ref)
 run: |
   state run deploy-updates
   state run deploy-installers
