--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -95,11 +95,11 @@ jobs:
         state run preprocess
     - name: Build
       shell: bash
-      if: "contains(['refs/heads/master', 'refs/heads/beta', 'refs/heads/release'], github.ref)"
+      if: contains(fromJSON('["refs/heads/master", "refs/heads/beta", "refs/heads/release"]'), github.ref)
       run: state run build
     - name: Build (32bit)
       shell: bash
-      if: "runner.os == 'Windows' && contains(['refs/heads/martind/ci-deploy-build-176150859'], github.ref)"
+      if: runner.os == 'Windows' && contains(fromJSON('["refs/heads/martind/ci-deploy-build-176150859"]'), github.ref)
       run: state run build-32bit
     - name: Build Install Scripts
       shell: bash
@@ -251,7 +251,7 @@ jobs:
         state run preprocess
     - name: Build
       shell: bash
-      if: "contains(['refs/heads/master', 'refs/heads/beta', 'refs/heads/release'], github.ref)"
+      if: contains(fromJSON('["refs/heads/master", "refs/heads/beta", "refs/heads/release"]'), github.ref)
       run: state run build
     - name: Generate Update
       shell: bash
@@ -333,7 +333,7 @@ jobs:
         state run preprocess
     - name: Build
       shell: bash
-      if: "contains(['refs/heads/master', 'refs/heads/beta', 'refs/heads/release'], github.ref)"
+      if: contains(fromJSON('["refs/heads/master", "refs/heads/beta", "refs/heads/release"]'), github.ref)
       run: state run build
     - name: Generate Update
       shell: bash
@@ -426,7 +426,7 @@ jobs:
       run: rm build/state* || true
     - name: Deploy
       shell: bash
-      if: "contains(['refs/heads/master', 'refs/heads/beta', 'refs/heads/release'], github.ref)"
+      if: contains(fromJSON('["refs/heads/master", "refs/heads/beta", "refs/heads/release"]'), github.ref)
       run: |
         state run deploy-updates
         state run deploy-installers
