--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -95,7 +95,7 @@ jobs:
         state run preprocess
     - name: Build
       shell: bash
-      if: contains(fromJSON('["refs/heads/martind/ci-deploy-build-176150859"]'), github.ref)
+      if: contains(fromJSON('["refs/pull/1174/merge"]'), github.ref)
       run: state run build
     - name: Build (32bit)
       shell: bash
@@ -251,7 +251,7 @@ jobs:
         state run preprocess
     - name: Build
       shell: bash
-      if: contains(fromJSON('["refs/heads/martind/ci-deploy-build-176150859"]'), github.ref)
+      if: contains(fromJSON('["refs/pull/1174/merge"]'), github.ref)
       run: state run build
     - name: Generate Update
       shell: bash
@@ -333,7 +333,7 @@ jobs:
         state run preprocess
     - name: Build
       shell: bash
-      if: contains(fromJSON('["refs/heads/martind/ci-deploy-build-176150859"]'), github.ref)
+      if: contains(fromJSON('["refs/pull/1174/merge"]'), github.ref)
       run: state run build
     - name: Generate Update
       shell: bash
