--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -89,7 +89,7 @@ jobs:
         state run preprocess
     - name: Build
       shell: bash
-      if: contains(fromJSON('["refs/heads/martind/ci-deploy-build-176150859"]'), github.ref)
+      if: contains(fromJSON('["refs/pull/1174/merge"]'), github.ref)
       run: state run build
     - name: Generate Update
       shell: bash
