Deploy on master, beta and release branch (#1174)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -423,7 +423,7 @@ jobs:
       run: rm build/state* || true
     - name: Deploy
       shell: bash
-      if: github.ref == 'refs/heads/master'
+      if: contains(fromJSON('["refs/heads/master", "refs/heads/beta", "refs/heads/release"]'), github.ref)
       run: |
         state run deploy-updates
         state run deploy-installers
