--- a/.github/workflows-src/steps.lib.yml
+++ b/.github/workflows-src/steps.lib.yml
@@ -223,7 +223,7 @@ run: |
 #@ def steps_deploy():
 name: "Deploy"
 shell: bash
-if: github.ref == 'refs/heads/master'
+if: contains(fromJSON('["refs/heads/master", "refs/heads/beta", "refs/heads/release"]'), github.ref)
 run: |
   state run deploy-updates
   state run deploy-installers
