--- a/.github/workflows-src/build.yml
+++ b/.github/workflows-src/build.yml
@@ -6,6 +6,8 @@ name: Build-Test-Deploy
   push:
     branches:
       - master
+      - beta
+      - release
   pull_request:
     types: [labeled, synchronize, reopened]
 
