--- a/activestate.yaml
+++ b/activestate.yaml
@@ -139,6 +139,15 @@ scripts:
     description: "Runs a remote debugger, that can be hooked into from your IDE, example usage: `state run debug activate` (will debug `state activate`)"
     standalone: true
     value: dlv debug --headless --listen=:2346 --api-version=2 github.com/ActiveState/cli/cmd/state -- $@
+  - name: story-cleanup
+    language: bash
+    description: "Runs Python script to move old stories from primary project to storage project"
+    value: |
+      export PT_API_TOKEN=$secrets.project.PT_API_TOKEN
+      export PT_PROJID_PRIMARY=$secrets.project.PT_PROJID_PRIMARY
+      export PT_PROJID_STORAGE=$secrets.project.PT_PROJID_STORAGE
+      export PT_DAYS_AGED=190 # set this value to control cleanup
+      ./scripts/story-cleanup/story-cleanup.py
 events:
   - name: activate
     if: ne .Shell "cmd"
