--- a/activestate.yaml
+++ b/activestate.yaml
@@ -1,4 +1,4 @@
-project: https://platform.activestate.com/ActiveState/cli?commitID=0ba549cb-e0af-4334-8d47-dcd245956ad2
+project: https://platform.activestate.com/ActiveState/cli?commitID=0ba549cb-e0af-4334-8d47-dcd245956ad2&branchName=tester
 constants:
   - name: CLI_BUILDFLAGS
     value: -ldflags="-s -w"
