--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -204,8 +204,8 @@ jobs:
       run: |
         go test `go list ./... | grep -v api | grep -v integration | grep -v expect`
   inttest_critical:
-    if: contains(fromJSON('["refs/heads/master", "refs/heads/beta", "refs/heads/release"]'),
-      github.ref)
+    if: github.ref != "refs/heads/master" && github.ref != "refs/heads/beta" && github.ref
+      != "refs/heads/release"
     name: Critical Integration Test
     strategy:
       matrix:
@@ -267,7 +267,7 @@ jobs:
       run: |
         export SHELL=''
         set +e
-        go test -timeout 10m github.com/ActiveState/cli/test/integration -test.v -test.run "^TestLanguageMsiActivePerl|TestDeployIntegrationTestSuite|TestInitIntegrationTestSuite|TestPushIntegrationTestSuite|TestUpdateIntegrationTestSuite|PrepareIntegrationTestSuite|InstallScriptsIntegrationTestSuite$"
+        go test -timeout 10m github.com/ActiveState/cli/test/integration -test.v -test.run "^TestLanguageMsiActivePerl|TestDeployIntegrationTestSuite|TestInitIntegrationTestSuite|TestPushIntegrationTestSuite|TestUpdateIntegrationTestSuite|PrepareIntegrationTestSuite|InstallScriptsIntegrationTestSuite|ShowIntegrationTestSuite$"
         testCode=$?
         head -n-0 build/*log 2>/dev/null
         exit ${testCode}
