--- a/.github/workflows-src/build.yml
+++ b/.github/workflows-src/build.yml
@@ -16,7 +16,7 @@ jobs:
   build: #@ jobs_build()
   unittest: #@ jobs_unittest()
   inttest_critical:
-    if: github.ref != "refs/heads/master" && github.ref != "refs/heads/beta" && github.ref != "refs/heads/release"
+    if: "github.ref != 'refs/heads/master' && github.ref != 'refs/heads/beta' && github.ref != 'refs/heads/release'"
     _: #@ template.replace(jobs_inttestcrit())
   inttest:
     if: contains(github.event.pull_request.labels.*.name, 'run integration tests')
