--- a/activestate.generators.yaml
+++ b/activestate.generators.yaml
@@ -56,7 +56,7 @@ scripts:
     description: Generate version file
     value: |
       mkdir -p build/update
-      wget -O build/update/version.json https://s3.ca-central-1.amazonaws.com/cli-update/update/state/version.json
+      wget -O build/update/version.json https://state-tool.s3.amazonaws.com/update/state/version.json
   - name: generate-update
     language: bash
     description: Generate update files
