--- a/activestate.generators.yaml
+++ b/activestate.generators.yaml
@@ -93,7 +93,7 @@ scripts:
       fi
 
       OUTPUT=cmd/state-tray/assets/icon.go
-      cat cmd/state-tray/assets/as.ico | 2goarray Icon assets > $OUTPUT
+      cat $constants.SYSTRAY_ICON | 2goarray Icon assets > $OUTPUT
       if [ $? -ne 0 ]; then
           echo Failure generating $OUTPUT
           exit
