--- a/activestate.yaml
+++ b/activestate.yaml
@@ -18,6 +18,9 @@ constants:
   - name: SYSTRAY_BUILDFLAGS
     if: ne .OS.Name "Windows"
     value: -ldflags="-s -w"
+  - name: SYSTRAY_ICON
+    if: ne .OS.Name "Windows"
+    value: cmd/state-tray/assets/as.png
   - name: SET_ENV
     description: The environment settings used throughout our project
     value: |
